--- a/VFDMotorControlWindows/VFDMotorControlWindows.vcxproj.filters
+++ b/VFDMotorControlWindows/VFDMotorControlWindows.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ModbusRTUClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileHandle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="COMPort.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ModbusRTUClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
