Squashed commit of the following:
commit 1d381d94f54ad364f61acd088cda2f2686b107d8
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Wed Mar 29 08:15:47 2023 +0300

    First part stable version

commit 13ca50b8c9fd399d152adc94081264455057ade7
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Fri Mar 10 19:18:29 2023 +0300

    Some small improvements

commit 2487961f7bce6f3ec5d0a884e182691810b63708
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Thu Mar 9 14:28:06 2023 +0300

    First release version

commit 4d54750f63b307a6869464bf51ffb381d5eaf6a6
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Thu Mar 9 13:54:45 2023 +0300

    MatLAB files update

commit 604c51a1b39855a40df73b272e3690cffd9bc5d6
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Thu Mar 9 13:36:02 2023 +0300

    Release of c++ program

commit e3cca4e0d5d12f592b1cac8899164acea737bee3
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Sat Mar 4 17:13:26 2023 +0300

    first full version of program

commit d000feae8476e1a21eca1692209c2660e2b30719
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Sun Feb 19 18:06:33 2023 +0300

    Com port final

commit ac7ec3f054978e51f49f345d1bfa41f3e479057b
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Sat Feb 18 13:12:54 2023 +0300

    COM port done!

commit 278ff889fb98504c3c94ecae8e2d7e44ee064e54
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Thu Feb 16 04:14:15 2023 +0300

    Common description finish

commit b6c681021c86c5dcf3504c743be9b2aab521b12d
Author: TAN4UKmax <tan4ukmak7@gmail.com>
Date:   Sun Feb 12 16:12:38 2023 +0300

    Add schematic and architecture diagram

--- a/VFDMotorControlWindows/VFDMotorControlWindows.vcxproj
+++ b/VFDMotorControlWindows/VFDMotorControlWindows.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{07ed0d61-e2b9-4507-8961-5e6c96e61724}</ProjectGuid>
+    <ProjectGuid>{22614236-70ac-45a1-a18d-5e41e8b0e7fb}</ProjectGuid>
     <RootNamespace>VFDMotorControlWindows</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="VFDMotorControlWindows.cpp" />
+    <ClCompile Include="COMPort.cpp" />
+    <ClCompile Include="COMPortFake.cpp" />
+    <ClCompile Include="FileHandle.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ModbusRTUClient.cpp" />
+    <ClCompile Include="VFD.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="COMPort.h" />
+    <ClInclude Include="COMPortFake.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="ModbusRTUClient.h" />
+    <ClInclude Include="VFD.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="coords.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
